@@ -1,3 +1,6 @@
+2010-10-15 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.44
+	* forces locale to "C" so that decimal mark '.' will always work
+
 2010-10-11 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.43
 	* fixed seek statement
 
